Update and rename capstone1.html to index.html

--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
 						<!--img-------->
 						<img src="./images/img-projects/1.png"/>
 						<!--details/comment------>
-						<h4>CAPSTONE 1</h4>
+						<h4>Course Booking Website</h4>
 						<p>-</p>
 						<!--btn--------->
 						<a href="#">Have a look</a>
@@ -274,22 +274,12 @@
 						<!--img-------->
 						<img src="./images/img-projects/2.png"/>
 						<!--details/comment------>
-						<h4>CAPSTONE 2</h4>
+						<h4>E-commerce Website</h4>
 						<p>-</p>
 						<!--btn--------->
-						<a href="#">Have a look</a>
+						<a href="https://b127-capstone-3-react-ecommerce.vercel.app/">
 					</div>
-
-					<!--box-3----->	
-					<div class="projects-box">
-						<!--img-------->
-						<img src="./images/img-projects/3.png"/>
-						<!--details/comment------>
-						<h4>CAPSTONE 3</h4>
-						<p>-</p>
-						<!--btn--------->
-						<a href="#">Have a look</a>
-					</div>
+						
 				</div>
 			</section>
 			<!-- End of Projects Section -->
