--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
 
 	<!-- External CSS -->
-	<link rel="stylesheet" type="text/css" href="./capstone1.css">
+	<link rel="stylesheet" type="text/css" href="./style.css">
 
 
 	<!-- Font Awesome -->
